Fix help text position on small screens

--- a/resources/css/wsrc.less
+++ b/resources/css/wsrc.less
@@ -730,6 +730,9 @@ form.settings-form {
     .helptext {
         font-size: 0.7em;
     }
+    .empty {
+        height: 1px;
+    }
 }
 
 form.settings-form fieldset {
